# LibPreprocessor

./: CMakeLists.txt  CMakePresets.json  README.md  configure.py  install.py  runtests.py  vcpkg.json
LibPreprocessor/: CMakeLists.txt
LibPreprocessor/include/libpreprocessor/: CMakeLists.txt  Interpreter.hpp  Lexer.hpp  Parser.hpp  Preprocessor.hpp  Processor.hpp  Token.hpp
LibPreprocessor/include/libpreprocessor/core/: CMakeLists.txt  Interpreter.hpp  Lexer.hpp  Parser.hpp  Token.hpp  Traversal.hpp
LibPreprocessor/include/libpreprocessor/core/nodes/: BodyNode.hpp  CMakeLists.txt  ConditionalStatementNode.hpp  ContentNode.hpp  ExpressionNode.hpp  INode.hpp  IStatement.hpp  IStatementNode.hpp  LiteralNode.hpp  Nodes.hpp  OperatorNode.hpp  PrintNode.hpp  SelectionMatchStatementNode.hpp  SelectionStatementNode.hpp  UnconditionalStatementNode.hpp
LibPreprocessor/include/libpreprocessor/nodes/: CMakeLists.txt  INode.hpp  IStatementNode.hpp
LibPreprocessor/source/: CMakeLists.txt  Interpreter.cpp  Lexer.cpp  Parser.cpp  Preprocessor.cpp  Processor.cpp
LibPreprocessor/source/core/: CMakeLists.txt  Interpreter.cpp  Lexer.cpp  Parser.cpp  Traversal.cpp
cmake/: LibPreprocessorConfig.cmake  enable_tests.cmake  static_analyzers.cmake
cmake/static_analyzers/: cppcheck.cmake
tests/: CMakeLists.txt
tests/if_statement/: CMakeLists.txt  if_statement.cpp
tests/if_statement/base/: CMakeLists.txt  Main.cpp
tests/if_statement/parsing/: CMakeLists.txt  Main.cpp
tests/if_statement/tokenization/: CMakeLists.txt  Main.cpp
tests/parsing/if_statement/: CMakeLists.txt  parsing_if_statement.cpp
tests/parsing/print_statement/: CMakeLists.txt  parsing_print_statement.cpp
tests/parsing/switch_statement/: CMakeLists.txt  parsing_switch_statement.cpp
tests/print_statement/: CMakeLists.txt  print_statement.cpp
tests/print_statement/base/: CMakeLists.txt  Main.cpp
tests/print_statement/parsing/: CMakeLists.txt  Main.cpp
tests/print_statement/tokenization/: CMakeLists.txt  Main.cpp
tests/switch_statement/: CMakeLists.txt  switch_statement.cpp
tests/switch_statement/base/: CMakeLists.txt  Main.cpp
tests/switch_statement/parsing/: CMakeLists.txt  Main.cpp
tests/switch_statement/tokenization/: CMakeLists.txt  Main.cpp
tests/tokenization/if_statement/: CMakeLists.txt  tokenization_if_statement.cpp
tests/tokenization/print_statement/: CMakeLists.txt  tokenization_print_statement.cpp
tests/tokenization/switch_statement/: CMakeLists.txt  tokenization_switch_statement.cpp
vcpkg-ports/liberror/: portfile.cmake  vcpkg.json
